@@ -118,6 +118,8 @@ Version CVS HEAD (?)
   * Bug fixes:
     - fixed a crash which occurs when removing a sampler channel waiting
       to start instrument loading after another channel
+    - fixed a crash which occurs when removing a sampler channel with
+      instrument loading in progress (bug #113)
 
 
 Version 0.5.1 (6 December 2007)
